--- a/viz_and_eda.Rmd
+++ b/viz_and_eda.Rmd
@@ -9,6 +9,7 @@ output: github_document
 library(tidyverse)
 library(ggplot2)
 library(ggridges)
+library(hexbin)
 ```
 
 Load a dataset
@@ -70,6 +71,40 @@ weather_df %>%
   geom_smooth(se = FALSE) + 
   facet_grid(. ~ name)
 ```
+One more scatter plot
+```{r}
+weather_df %>% 
+  ggplot(aes(x = date, y = tmax)) +
+  geom_point(alpha = 0.3) +
+  facet_grid(. ~ name) +
+  geom_smooth(se = FALSE) # se = TRUE give confidence interval
+```
+
+## Use data manipulation as part of this
+
+```{r}
+weather_df %>% 
+  filter(name == "CentralPark_NY") %>% 
+  mutate(tmax = tmax * (9/5) + 32,
+         tmin = tmin * (9/5) + 32) %>% 
+  ggplot(aes(x = tmin, y = tmax)) +
+  geom_point()
+```
+
+## Stacking geoms
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = date, y = tmax, color = name)) +
+  geom_smooth()
+```
+```{r}
+ggplot(weather_df, aes(x = tmax, y = tmin)) + 
+  geom_hex()
+```
+
+
+
 
 
 
