--- a/viz_and_eda.Rmd
+++ b/viz_and_eda.Rmd
@@ -144,11 +144,13 @@ weather_df %>%
   ggplot(aes(x = tmax, y = name)) + 
   geom_density_ridges(alpha = 0.8, scale = 0.8)
 ```
+
 ## Embedding plots
 
 ```{r, fig.width=12}
 weather_plot = ggplot(weather_df, aes(x = tmin, y = tmax)) + 
   geom_point(aes(color = name), alpha = .5) 
+weather_plot
 ```
 
 
