--- a/viz_and_eda.Rmd
+++ b/viz_and_eda.Rmd
@@ -16,6 +16,16 @@ knitr::opts_chunk$set(
   fig.asp = .6,
   out.width = "90%"
 )
+
+# theme_set(theme_minimal() + theme(legend.position = "bottom"))
+
+#options(
+#  ggplot2.continuous.colour = "viridis",
+#  ggplot2.continuous.fill = "viridis"
+#)
+
+#scale_colour_discrete = scale_colour_viridis_d
+#scale_fill_discrete = scale_fill_viridis_d
 ```
 
 Load a dataset
@@ -152,6 +162,102 @@ weather_plot = ggplot(weather_df, aes(x = tmin, y = tmax)) +
   geom_point(aes(color = name), alpha = .5) 
 weather_plot
 ```
+
+
+## Start with a familiar one
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  labs(
+    title = "Temperature at three stations",
+    x = "Minimum daily temp (C)",
+    y = "Maximum daily temp (C)",
+    caption = "Data from package rnoaa with three stations" 
+  )
+```
+
+## Scales
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  labs(
+    title = "Temperature at three stations",
+    x = "Minimum daily temp (C)",
+    y = "Maximum daily temp (C)",
+    caption = "Data from package rnoaa with three stations" 
+  ) +
+  scale_x_continuous(
+    breaks = c(-15, 0, 15),
+    labels = c("-15 C", "0", "15")
+  ) +
+  scale_y_continuous(
+    trans = "sqrt",
+    position = "right" # label on the right
+  )
+```
+
+Color Scales
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  labs(
+    title = "Temperature at three stations",
+    x = "Minimum daily temp (C)",
+    y = "Maximum daily temp (C)",
+    caption = "Data from package rnoaa with three stations" 
+  ) +
+  scale_color_hue(
+    name = "Location", # change legend title
+    h = c(100, 300)) +
+  scale_color_viridis_d()
+# https://cran.r-project.org/web/packages/viridis/vignettes/intro-to-viridis.html
+```
+
+## Themes
+
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  labs(
+    title = "Temperature at three stations",
+    x = "Minimum daily temp (C)",
+    y = "Maximum daily temp (C)",
+    caption = "Data from package rnoaa with three stations" 
+  ) +
+  scale_color_hue(
+    name = "Location", # change label name
+    h = c(100, 300)) +
+  scale_color_viridis_d() +
+  theme_minimal() + # background; do this first!! then update other themes
+  theme(legend.position = "bottom")
+```
+```{r}
+weather_df %>% 
+  ggplot(aes(x = tmin, y = tmax, color = name)) +
+  geom_point(alpha = 0.3) +
+  labs(
+    title = "Temperature at three stations",
+    x = "Minimum daily temp (C)",
+    y = "Maximum daily temp (C)",
+    caption = "Data from package rnoaa with three stations" 
+  ) +
+  scale_color_hue(
+    name = "Location", # change label name
+    h = c(100, 300)) +
+  scale_color_viridis_d() + 
+  ggthemes::theme_excel() +
+  theme(legend.position = "bottom")
+```
+
+
+
+
 
 
 
