--- a/viz_and_eda.Rmd
+++ b/viz_and_eda.Rmd
@@ -356,6 +356,101 @@ pulse_df %>%
 
 
 
+```{r}
+weather_df =  
+  rnoaa::meteo_pull_monitors(
+    c("USW00094728", "USC00519397", "USS0023B17S"),
+    var = c("PRCP", "TMIN", "TMAX"), 
+    date_min = "2017-01-01",
+    date_max = "2017-12-31") %>%
+  mutate(
+    name = recode(
+      id, 
+      USW00094728 = "CentralPark_NY", 
+      USC00519397 = "Waikiki_HA",
+      USS0023B17S = "Waterhole_WA"),
+    tmin = tmin / 10,
+    tmax = tmax / 10,
+    month = lubridate::floor_date(date, unit = "month")) %>%
+  select(name, id, everything())
+```
+
+## `group_by`
+```{r}
+weather_df %>% 
+  group_by(name, month)
+```
+## count some things
+```{r}
+weather_df %>% 
+  group_by(month) %>% 
+  summarize(n_obs = n()) # give group size
+
+weather_df %>% 
+  count(name)
+```
+
+`table` doesn't produce a data.frame, while summarize does. NOT use table()
+```{r}
+weather_df %>% 
+  pull(name) %>% 
+  table()
+```
+
+```{r}
+weather_df %>% 
+  janitor::tabyl(month, name) # two interested variable
+```
+
+## More general summaries
+
+count, take means, look at SDs
+
+```{r}
+weather_df %>% 
+  group_by(name, month) %>% 
+  summarize(
+    n_obs = n(),
+    mean_tmax = mean(tmax, na.rm = TRUE), # remove NA values
+    median_tmax = median(tmax, na.rm = TRUE),
+    sd_tmax = sd(tmax, na.rm = TRUE)
+  ) %>% 
+ggplot(aes(x = month, y = mean_tmax, color = name)) + 
+  geom_point() +
+  geom_line()
+```
+
+Formatting table output
+```{r}
+weather_df %>% 
+  group_by(name) %>% 
+  summarize(n_obs = n(),
+            mean_tmax = mean(tmax, na.rm = TRUE)) %>% 
+  knitr::kable(digits = 2)
+```
+
+## grouped `mutate`
+
+```{r}
+weather_df %>% 
+  mutate(
+    mean_tmax = mean(tmax, na.rm = TRUE),
+    centered_tmax = tmax - mean_tmax
+      ) %>% 
+  ggplot(aes(x = date, y = centered_tmax, color = name)) +
+  geom_point()
+```
+
+
+
+
+
+
+
+
+
+
+
 
 
 
