case study, map

--- a/viz_and_eda.Rmd
+++ b/viz_and_eda.Rmd
@@ -12,6 +12,8 @@ library(ggridges)
 library(hexbin)
 library(patchwork)
 library(haven)
+library(p8105.datasets)
+library(leaflet)
 
 knitr::opts_chunk$set(
   fig.width = 6,
@@ -19,7 +21,7 @@ knitr::opts_chunk$set(
   out.width = "90%"
 )
 
-# theme_set(theme_minimal() + theme(legend.position = "bottom"))
+#theme_set(theme_minimal() + theme(legend.position = "bottom"))
 
 #options(
 #  ggplot2.continuous.colour = "viridis",
@@ -478,24 +480,81 @@ weather_df %>%
 
 
 
+## Case Study
+
+```{r}
+data("nyc_airbnb")
+```
+
+```{r}
+nyc_airbnb = 
+  nyc_airbnb %>% 
+  mutate(stars = review_scores_location / 2) %>% 
+  rename(borough = neighbourhood_group)
+```
+
+Let's try counting things
+
+```{r}
+nyc_airbnb %>% 
+  janitor::tabyl(borough, room_type)
+```
+```{r}
+nyc_airbnb %>% 
+  count(borough, room_type) %>% 
+  pivot_wider(
+    names_from = room_type,
+    values_from = n
+  )
+```
+
+* Is availability related to price?
+```{r}
+library(rgeos)
+library(maptools)
+```
 
 
+```{r}
+nyc_airbnb %>% 
+  ggplot(aes(x = stars, y = price, color = borough)) + geom_point(alpha = 0.3) +
+  facet_grid(. ~room_type)
+
+nyc_airbnb %>% 
+  group_by(neighbourhood) %>% 
+  summarize(mean_price = mean(price, na.rm = TRUE)) %>% 
+  arrange(mean_price)
+
+nyc_airbnb %>% 
+  filter(borough == "Manhattan",
+         price <= 1000) %>% 
+  mutate(neighbourhood = fct_reorder(neighbourhood, price)) %>% 
+  ggplot(aes(x = neighbourhood, y = price)) + geom_boxplot() +
+  coord_flip()# +
+  #facet_grid(. ~ room_type)
+```
+
+Price vs Location
+```{r}
+nyc_airbnb %>% 
+  filter(price < 500) %>% 
+  sample_n(5000) %>% 
+  ggplot(aes(x = lat, y = long, color = price)) +
+  geom_point(alpha = 0.5)
+```
 
 
+## retry leaflet
+```{r, eval=FALSE}
+pal <- colorNumeric("viridis", NULL)
 
-
-
-
-
-
-
-
-
-
-
-
-
-
+nyc_airbnb %>% 
+  filter(price < 500) %>% 
+  sample_n(1000) %>% 
+  leaflet() %>% 
+  addTiles() %>% 
+  addCircleMarkers(~lat, ~long, radius = 0.5, color = ~pal(price))
+```
 
 
 
